Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -53,7 +53,9 @@
    "outputs": [],
    "source": [
     "def poisson_probability(lambd, x):\n",
-    "    pass"
+    "    \n",
+    "    prob\n",
+    "    return prob"
    ]
   },
   {
