--- a/index.ipynb
+++ b/index.ipynb
@@ -53,7 +53,7 @@
    "outputs": [],
    "source": [
     "def poisson_probability(lambd, x):\n",
-    "    lamb\n",
+    "    lambd**x * \n",
     "    prob\n",
     "    return prob"
    ]
