--- a/index.ipynb
+++ b/index.ipynb
@@ -48,13 +48,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "def poisson_probability(lambd, x):\n",
-    "    (lambd**x * np.exp(-lambd)) / math.factorial(x)\n",
-    "    prob\n",
+    "    prob = (lambd**x * np.exp(-lambd)) / math.factorial(x)\n",
     "    return prob"
    ]
   },
