--- a/index.ipynb
+++ b/index.ipynb
@@ -102,7 +102,7 @@
    "outputs": [],
    "source": [
     "lambd_q2 = 4/7\n",
-    "prob_q2 = poisson_probability()\n",
+    "prob_q2 = poisson_probability(lambd_q2,1)\n",
     "print(prob_q2)  # Expected Output: 0.32269606971871956"
    ]
   },
