--- a/index.ipynb
+++ b/index.ipynb
@@ -125,12 +125,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.18764840049328912\n"
+     ]
+    }
+   ],
    "source": [
     "lambd_q3 = 50/24\n",
-    "prob_q3 = poisson_probability(lambd_q3)\n",
+    "prob_q3 = poisson_probability(lambd_q3,3)\n",
     "print(prob_q3)  # Expected Output: 0.18764840049328912"
    ]
   },
@@ -149,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lambd_q4 = None\n",
+    "lambd_q4 = 25\n",
     "prob_q4 = None\n",
     "print(prob_q4)   # Expected Output: 0.1240136186052091"
    ]
